# RoboSub

./: .env  .gitignore  DEPENDENCY_MANAGEMENT.md  MIGRATION.md  README.md  SIMULATION.md  arvp_bottom_obb_goated_v4.json  best.json  build.sh  joystick_local.sh  keyboard_local.sh  launch.py  launch.sh  local_requirements.txt  logs.sh  new_arvp_front.json  pixi.toml  ports.sh  pyproject.toml  record_all.sh  record_cameras.sh  record_important.sh  requirements.txt  save_bag.py  setup.sh  sim.sh  sim_docker.sh  sim_local.sh  tether_monitor.py  yolo11n.json
.devcontainer/: Dockerfile  devcontainer.json  repos_to_submodules.py  robosub_stuff.code-workspace
docs/: navigation.md
onboarding/: README.md  preflight_sensors.md
onboarding/paths/: README.md
replay/: sync_imu.py  untransform_imu.py
src/: navigation.md  ros2.repos
src/control/: README.md  control.md  package.xml  setup.py  testing.md  thrusters.py
src/control/control/: pid.yaml  thrusters.py
src/control/control/config/: threshold.yaml
src/control/control/nodes/: cam_lock.py  controller.py  execute_action.py  kmPID.py  kmcontroller.py  logger.py  nextReference.py  path_generator.py  path_tracker.py  pid.py  pid_config.py  pid_control.py  plot.py  prequal.py  sim_tester.py  state.py  stop.py  test_control.py  test_controller.py  test_path.py  test_thrust.py  test_waypoints copy.json  test_waypoints.json  test_waypoints.py  thrust_generator.py  thrusters.py
src/control/control/nodes/oldThrustgenerator/: thrust_generator.py
src/control/control/nodes/testHarness/: test_path.py
src/control/control/nodes/testHarness/PID_jsons/: firstParameters.json
src/control/control/utils/: animation.py  controllers.py  mpc.py  nextReference.py  nextstate.py  path_2d_no_rotation.py  path_3d_no_rotation.py  path_3d_rotation.py  path_3d_rotation_unbounded.py  path_eq.py  path_state.py  pid.py  state.py  thrust_generator.py  tools.py  utils.py  vehicle_models.py  wrench.py
src/control/launch/: control.py  wrench_to_pwm.py
src/control/test/: test_controller.py  test_nextReference.py  test_pid.py  test_thrust_generator.py  test_thrusters.py
src/gui/: README.md  auv_hud.html  gui.md  launch_sub.sh  package.xml  readme.txt  ros2_gui_bridge.py  setup.py
src/gui/gui/: ros2_gui_bridge.py
src/gui/scripts/: launch_sub.sh  start_hardware.sh
src/hardware/: README.md  package.xml  setup.py  teensy.ino
src/hardware/hardware/: config.py  sensors.py  sensors.yaml  thrusters.py  thrusters.yaml
src/hardware/hardware/launch/: test_imu.py
src/hardware/hardware/nodes/: StarOddi.py  arduino.py  depth_sensor.py  dvl.py  dvl_plot.py  dvl_test.py  generic_sensor.py  hydrodata.py  imu.py  imu_plot.py  imu_plot_orientation.py  localization_plot.py  localization_test.py  sensors.py  sensors_plot.py  thrusters.py
src/hardware/hardware/utils/: average_quaternions.py  setup.py  test_dvl.py  thrusters.py
src/hardware/hardware/utils/dvl/: commands.py  dvl.py  packets.py  system.py
src/hardware/hardware/utils/dvl_utils/: dvl_connect.py  packets.py  system.py  util.py
src/hardware/launch/: track_localization.py
src/hardware/test/: test_thrusters.py
src/main/: CMakeLists.txt  README.md  package.xml
src/main/launch/: control.py  hardware.py  localization.py  main.py  manual.py  perception.py  planning.py  prequal.py  save_replay.sh  simulation.py  state.py  task.py  test.py
src/main/launch/params/: global.yaml  thrusters.yaml
src/perception/: README.md  package.xml  setup.py  videoplayback.mp4:Zone.Identifier
src/perception/launch/: 2dbbox_video.py  aligned_depth_localizer.py  camera.py  video.py
src/perception/perception/: app.py  cameras.yaml  object_localization.py  stream_over_ethernet.py
src/perception/perception/nodes/: YOLONode.py  __init__.py  aligned_depth_backends.py  aligned_depth_publisher.py  camera.py  camera_video.py  camera_viewer.py  depth_node.py  detection.py  detections_3d.py  detections_3d_bbox.py  detections_3d_points.py  dummy_video.py  gate_detector.py  gate_localizer.py  generic_camera.py  oak.py  object_detections.py  object_localizer.py  objects_detector.py  objects_localizer.py  photographer.py  realsense.py  relay_detections.py  test_dummy_video.py  transform_to_world.py
src/perception/perception/nodes/test/: video.py  view_detections_3d.py  view_detections_3d_points.py  view_video.py
src/perception/perception/utils/: bounding_box.py  calib_19443010B17E1C1300.json  calibrate.py  camera_demo.py  test.py
src/perception/perception/utils/test/: blending_rgb_depth.py  test_bounding_box.py
src/planning/: README.md  package.xml  setup.py
src/planning/planning/: mission.yaml  mission_planner.py  sample_path.yaml  test_mission_planner.py
src/planning/planning/nodes/: broadcast_path.py  dropper_task.py  load_path.py  mission_executor.py  path_generator.py  test_waypoints.json  torpedo_task.py  track_centroid.py  track_object.py  waypoint_test.py
src/planning/planning/utils/: create_path.py  path_3d_rotation.py  path_3d_rotation_unbounded.py  stream_path_points.py  utils.py  visualize_path.py
src/simulation/: README.md  gz_camera_stream.py  package.xml  sensors.py  setup.py  simulation.md  thrusters.py
src/simulation/simulation/: bridge.py  bridge_docker.py  bridge_local.py  gazebo_bridge.yaml  gz_camera_stream.py  thrusters.py
src/simulation/simulation/custom_gz_plugins/: CMakeLists.txt  PathVisualizer.cc  PathVisualizer.hh  PathVisualizer.qml  PathVisualizer.qrc  package.xml
src/simulation/simulation/custom_gz_plugins/proto/gz/custom_msgs/: GeneratedPath.proto
src/simulation/simulation/materials/: sand.dae
src/simulation/simulation/media/materials/scripts/: person.material
src/simulation/simulation/models/: world.urdf
src/simulation/simulation/models/auv/: model.config  model.urdf
src/simulation/simulation/models/robot/: model.config  model.urdf
src/simulation/simulation/models/test/: model.urdf  test.glb
src/simulation/simulation/nodes/: dvl_bridge.py  path_bridge.py  sensors.py  thrusters.py
src/state/: README.md  package.xml  setup.cfg  setup.py
(+119 files in other folders)
