[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "robosub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colcon-common-extensions>=0.3.0",
    "pyserial>=3.5",
]
