<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>0.0.0</version>
  <description>This package is in charge of controlling the robot. Given a path and the robot's state, it is able to output the magnitudes for each thruster for how the robot is supposed to move.</description>
  <maintainer email="scotthickmann21@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-spatialmath</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_black</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
