<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main</name>
  <version>0.0.0</version>
  <description>This package contains all end-to-end launch files for the robot.</description>
  <maintainer email="scotthickmann21@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>hardware</exec_depend>
  <exec_depend>manual</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>planning</exec_depend>
  <exec_depend>simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
