<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state</name>
  <version>0.0.0</version>
  <description>This package acts is in charge of computing the robot state based on various sensor messages. It receives these sensor messages as inputs from either the hardware or simulation package, and outputs a state message for use by the planning and control packages.</description>
  <maintainer email="scotthickmann21@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_black</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
